# AI_career_assistant

./: README.md  agent.py  digital_twin.ipynb  my_ai_assistant.ipynb  pyproject.toml  setup.py  tools.py
ai_assistant/: __init__.py  agent.py  assistant.py  config.py  my_ai_assistant.ipynb  tools.py
assistant/: agent.py  my_ai_assistant.ipynb  tools.py
